Add CarteRapido and CarteAbonnementCarburant modules, services, and models

--- a/src/app/modules/carburant/carburant.component.html
+++ b/src/app/modules/carburant/carburant.component.html
@@ -39,8 +39,11 @@
                 <a routerLink="/bon-carburant/sortant" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-hand-holding-box"></i> Sortant
                 </a>
-                <a routerLink="/bon-carburant/entrant" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                <!-- <a routerLink="/bon-carburant/entrant" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-warehouse"></i> Stock
+                </a> -->
+                <a routerLink="/bon-carburant/carte-abonnement" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-credit-card-front"></i> Carte
                 </a>
                 <a routerLink="/bon-carburant/type-coupure" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-cabinet-filing"></i> Coupure
