--- a/src/app/modules/transport/template/template.component.html
+++ b/src/app/modules/transport/template/template.component.html
@@ -45,6 +45,9 @@
                 <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-user-tie"></i> Conducteurs
                 </a>
+                <a routerLink="/transport/carte-rapido" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-credit-card-blank"></i> Carte
+                </a>
                 <a routerLink="/transport/assurance" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-car-crash"></i> Assurance
                 </a>
@@ -55,7 +58,7 @@
                   <i class="fas fa-user-tie"></i> cartes rapido
                 </a> -->
                 <a routerLink="/transport/panne" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-car-garage"></i> pannes & commandes
+                  <i class="fas fa-car-garage"></i> pannes & bons
                 </a>
                 <a routerLink="/transport/calendrier" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-calendar"></i> Calendrier
