--- a/src/app/components/modules/tableau/tableau-bord.component.html
+++ b/src/app/components/modules/tableau/tableau-bord.component.html
@@ -2,10 +2,13 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion animated slideInLeft"
+    <!-- <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion animated slideInLeft"
         id="accordionSidebar">
         <app-sidebar></app-sidebar>
-    </ul>
+    </ul> -->
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <app-sidebar></app-sidebar>
+      </ul>
     <!-- End of Sidebar -->
 
     <!-- Content Wrapper -->
