--- a/src/app/modules/transport/template/template.component.html
+++ b/src/app/modules/transport/template/template.component.html
@@ -42,8 +42,8 @@
                 <!-- <a routerLink="/transport/mes-itineraires" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-route"></i> Itineraires
                 </a> -->
-                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-user-tie"></i> Conducteurs
+                <a routerLink="/transport/mes-chauffeurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-user-tie"></i> Chauffeurs
                 </a>
                 <a routerLink="/transport/carte-rapido" [routerLinkActive]="'text-primary'" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-credit-card-blank"></i> Carte
