--- a/src/app/components/mission/add-mission/add-mission.component.html
+++ b/src/app/components/mission/add-mission/add-mission.component.html
@@ -34,6 +34,24 @@
   </div>
   <div class="col-md-12 p-0">
     <form [formGroup]="forms.add" (ngSubmit)="addOrEdit()" class="form row" role="form" autocomplete="off">
+      <div class="form-group col-md-6">
+        <label class="col-sm-12 col-form-label form-control-label pl-0">Code<span
+            class="text-danger requiredField">*</span>
+            <span style="zoom: 50%;" [class.loading]="forms['add'].get('code').status === 'PENDING'"></span>
+        </label>
+        <div class="col-sm-12 pl-0">
+          <input formControlName="code" class="form-control form-control-lg" type="text">
+          <div *ngIf="checkIfControlHasError('add','code','alreadyUsedCode')" class="text-danger">Ce code est deja attribuer.</div>
+        </div>
+      </div>
+      <div class="form-group col-md-6">
+        <label class="col-sm-12 col-form-label form-control-label pl-0">Libelle<span
+            class="text-danger requiredField">*</span>
+        </label>
+        <div class="col-sm-12 pl-0">
+          <input formControlName="name" class="form-control form-control-lg" type="text">
+        </div>
+      </div>
       <div class="form-group col-md-4">
         <label class="col-sm-12 col-form-label form-control-label pl-0">
           Archive <span class="text-danger requiredField">*</span>
@@ -52,7 +70,7 @@
           <span [title]="'createNew' | translate" class="float-right">
             <i *ngIf="[2, 3, 4, 5].includes(profile?.user_type_id)" class="text-xs fas fa-plus-circle handMe"
               popoverPlacement="bottom-left" [popoverOnHover]="false" [popover]="addDepartement"></i>
-            <popover-content *ngIf="[2, 3, 4, 5].includes(profile?.user_type_id)" #addDepartement
+            <popover-content #addDepartement
               title="Nouveau departement" [animation]="true" [closeOnClickOutside]="true" placement="bottom">
               <app-add-departement></app-add-departement>
 
@@ -73,7 +91,7 @@
           <span [title]="'createNew' | translate" class="float-right">
             <i *ngIf="[2, 3, 4, 5].includes(profile?.user_type_id)" class="text-xs fas fa-plus-circle handMe"
               popoverPlacement="bottom-left" [popoverOnHover]="false" [popover]="addPoste"></i>
-            <popover-content *ngIf="[2, 3, 4, 5].includes(profile?.user_type_id)" #addPoste
+            <popover-content #addPoste
               title="Nouveau type de mission" [animation]="true" [closeOnClickOutside]="true" placement="bottom">
               <app-add-type-mission></app-add-type-mission>
 
@@ -140,14 +158,7 @@
           </select>
         </div>
       </div>
-      <div class="form-group col-md-12">
-        <label class="col-sm-12 col-form-label form-control-label pl-0">Libelle<span
-            class="text-danger requiredField">*</span>
-        </label>
-        <div class="col-sm-12 pl-0">
-          <input formControlName="name" class="form-control form-control-lg" type="text">
-        </div>
-      </div>
+      
       <div class="form-group col-md-6">
         <label class="col-sm-12 col-form-label form-control-label pl-0">Début<span
             class="text-danger requiredField">*</span>
